<resources>
    <string name="app_name">Gearcom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>
    <string name="my_order">My Orders</string>
    <string name="my_cart">My Carts</string>
    <string name="location">Shop location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibjRubjAiLCJhIjoiY2xuaG9zenNsMTV6dzJscml6ejVzeTZxNCJ9.wr9xt3U4y3A3bWIRXN2XIg</string>
</resources>