<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.gearcom.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.gearcom.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_category"
        android:name="com.gearcom.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_order"
        android:name="com.gearcom.ui.orders.MyOrdersFragment"
        android:label="@string/my_order"
        tools:layout="@layout/fragment_my_orders" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.gearcom.ui.carts.MyCartsFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_carts" />
    <fragment
        android:id="@+id/nav_list_all_product"
        android:name="com.gearcom.ListAllProductFragment"
        android:label="fragment_list_all_product"
        tools:layout="@layout/fragment_list_all_product" />
</navigation>